# workshop-dbt-biquery

./: .sqlfluff  .user.yml  README.md  dbt_project.yml  profiles.yml  pyproject.toml
macros/: generate_schema_name.sql
models/mart/: customer_order_totals.yml
models/staging/: stg_customers.sql  stg_locations.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_supplies.sql
seeds/: raw_stores.csv
