[project]
name = "workshop-dbt-bigquery"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Reis",email = "gustavoazreis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core (>=1.9.2,<2.0.0)",
    "dbt-bigquery (>=1.9.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
sqlfluff = "^3.3.1"
